--- a/VRChat/42/1327242.html
+++ b/VRChat/42/1327242.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "p5osI5/ByIl30RZ+5FEsRKA2IxuhUCVkqeVSZRZ0WU0="></script>
+    "gZexJ2wS7d7Y0OHgKSqLO1pFfWCz32m8nb8Ha8rzAi0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY Over and Under Shotgun】上下二連散弾銃 fbxモデル","description":"シンプルな上下二連散弾銃です。\nボーンのRotateでブレイクオープンします。\nブレイクオープンした時にショットシェルが飛び出すようなパーティクルも入れています。\nリロードモーションを再現するには少しのunityアニメーション知識を必要とします。\n\nパーティクルの動作です。\n https://twitter.com/ALERT_jp_555/status/1120150561225986048","url":"https://booth.pm/ja/items/1327242","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1327242/520e577f-3461-4b83-82ca-5b387ad8ea2e_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p5osI5/ByIl30RZ+5FEsRKA2IxuhUCVkqeVSZRZ0WU0="></script>
+    nonce="gZexJ2wS7d7Y0OHgKSqLO1pFfWCz32m8nb8Ha8rzAi0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -474,9 +474,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
