--- a/VRChat/20/1327220.html
+++ b/VRChat/20/1327220.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EQwm4CfLl7/teOdfnm/6eDhuRN3NKvX+S5RTtnz+FCQ="></script>
+    "gwOel3TvgeYKaKTaNXIY31C6dxs83GkPbaOiWZ0rrJs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル「大太刀」","description":"VRChat向けオリジナル3Dモデル「大太刀」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータをダウンロード及び購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n\n●モデルデータ\n・oodachi.fbx\n2メッシュで構成されているモデルデータです。三角ポリゴン数：8981\n\n\n●プレハブ\n・oodachi.prefab　抜刀状態の刀\n・oodachi +saya.prefab　納刀状態の刀\n\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\n\n●マテリアル\n・base.mat\n※Arktoon shaderで設定をしているため、Arktoon shaderを導入していない場合エラーが起きます。\n\n●各マテリアルごとのテクスチャ\n・AlbedoTransparency.png　通常では使用していません。\n・MetallicSmoothness.png\n・Normal.png\n・2Dview.png　基本色としてマテリアルに登録をしているテクスチャです。\nAlbedoTransparency.pngをマテリアルに登録するとある程度アニメ寄りなフラットな見た目になります。\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。\n","url":"https://booth.pm/ja/items/1327220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1327220/ed93a7be-93a4-4361-bb6c-317e6db61d41_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EQwm4CfLl7/teOdfnm/6eDhuRN3NKvX+S5RTtnz+FCQ="></script>
+    nonce="gwOel3TvgeYKaKTaNXIY31C6dxs83GkPbaOiWZ0rrJs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -620,9 +620,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
