--- a/VRChat/76/1327076.html
+++ b/VRChat/76/1327076.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "a9FuLvc1JpWIq2HxqXSb+C09HREyqxqRMFMKzxq0NtU="></script>
+    "aRoAgytK1Zb3tfA65V1p2OAST6OWt333MxTrCFn2c44="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"長提灯","description":"Verts:2,194\nTris:4,272\n\n長提灯です。\n日本風のワールド作成にお役立てください。\n\n\n\n内容物----------------\n\njapaneselantern.fbx\n\njapaneselantern.obj\njapaneselantern.mtl\n\nread.txt（利用規約）\n\n【Texturesフォルダ】\nLantern-base.jpg\nLantern-base-Light.jpg\nLantern-textsample.png\nstandtexture.jpg\n-----------------------\n※Lantern-textsample.pngは文字入れサンプル用のテクスチャです。","url":"https://booth.pm/ja/items/1327076","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/01dc1112-4606-408e-8edd-553bdac9acd1/i/1327076/4ed7be99-f158-4103-ab39-73eae663f16c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a9FuLvc1JpWIq2HxqXSb+C09HREyqxqRMFMKzxq0NtU="></script>
+    nonce="aRoAgytK1Zb3tfA65V1p2OAST6OWt333MxTrCFn2c44="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      73
+                                      72
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      73
+                                      72
                                     </div>
                                   </div></a>
                                 </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
