--- a/VRChat/59/1325059.html
+++ b/VRChat/59/1325059.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lxkm8unj9Re5eMZbVEuQnPFlNAaFJtIQMXjbxu+TIn0="></script>
+    "O8j/+DPfqfuBTsBpaGC1FDUnDcsfRQ+lkUVrpaux3qA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホロ恋子 ローポリゴンモデル(1,996ポリゴン) UnityPackage同梱","description":"ブログサイトで作成手順を紹介したフルスクラッチモデルです。\n作成の過程を以下のブログサイトで公開しています。\nhttp://bluebirdofoz.hatenablog.com/entry/2018/11/28/095308\n\nHoloLensや携帯端末などリソースの限られた環境での利用を想定しており、軽量なモデルです。\nHMDアクセサリを含めたポリゴン数は 1,996 となっています。\n\nオリジナルデータ追加セットは FBXファイル + UnityPackage ファイルに加えて、編集データである .Blend ファイルと .clip ファイルを含めています。\n\n● モデル情報\n 三角面数：1,996\n テクスチャ：2048x2048(1枚)\n オブジェクト分割無し\n （ライティングを行わない環境での利用を想定し、テクスチャに影を描き込み済み）\n\n● 基本セットに含まれるもの\nHoloLenko_2000poly\n├FBXPackage\n│├HoloLenKo_2000poly_Texture.png  … テクスチャ画像\n│└HoloLenko_2000poly.fbx          … FBX形式モデルデータ\n└UnityPackage\n  └HoloLenKo_2000poly.unitypackage … Unity用インポートパッケージ\n\n● オリジナルデータ追加セットに含まれるもの\nHoloLenko_2000poly_Original\n├Sitae\n│└正面遠_頭身変更_三面図_グリッドなし.png … Blender用下絵画像\n├Texture\n│├HoloLenKo_2000poly_Texture.png  … テクスチャ画像\n│└HoloLenKo_2000poly_Texture.clip … テクスチャ画像の元データ\n└HoloLenko_2000poly.blend … Blenderプロジェクトファイル\n\n(オリジナルデータ追加セットに含まれる HoloLenKo_2000poly_Texture.clip を開くには別途 CLIP STUDIO PAINT が必要です)","url":"https://booth.pm/ja/items/1325059","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/59890598-c650-4863-9902-c23f3de9a5cd/i/1325059/6527377f-3f8c-4a58-86d7-6a41ca62a3a5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lxkm8unj9Re5eMZbVEuQnPFlNAaFJtIQMXjbxu+TIn0="></script>
+    nonce="O8j/+DPfqfuBTsBpaGC1FDUnDcsfRQ+lkUVrpaux3qA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -609,9 +609,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
