--- a/VRChat/63/1324663.html
+++ b/VRChat/63/1324663.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jxqCCBuUPuM9wghR2/ew45BK4SYO5gPXPsELCM8H4js="></script>
+    "kxUnhG1fsUHtd7uKjKz92jHPpQOR90BwAwwnQxn9Ao0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】三種類の椅子【無料配布】","description":"内容物\n　blendファイル\n　FBXファイル\n　テクスチャ三種（赤、緑、青）\n　利用規約\n\nモデルについて\n　Chair_Kad0　△348ポリゴン\n　サイズ　約0.48m×約0.53m×0.96m\n\n利用規約\n\n　・再配布、改変は自由です\n\n　・当データを利用する時点で本規約に同意したものとします\n　・本規約の内容は変更される場合があり、常に最新のものが適応されます\n　・権利者や作者を偽る事を禁止しております\n　・当データのダウンロード、使用によって発生したトラブル等において、当方は一切の責任を負いません\n　・公序良俗に反する行為や目的、政治及び宗教活動、他者への誹謗中傷目的での使用を禁止しております\n\n\n　©Kad0maru\n　製作者:Kad0maru\n　制定日:2019/04/20\n　TwitterID：@Kad0maru","url":"https://booth.pm/ja/items/1324663","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/bb561cba-7c28-448e-beae-ffa2586c45e4/i/1324663/20300989-adba-4879-982f-60a0ceb706c9_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jxqCCBuUPuM9wghR2/ew45BK4SYO5gPXPsELCM8H4js="></script>
+    nonce="kxUnhG1fsUHtd7uKjKz92jHPpQOR90BwAwwnQxn9Ao0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -367,9 +367,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
